<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuMantenedores">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Cerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Fecha: "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="111dp"
        android:layout_height="22dp"
        android:layout_marginEnd="120dp"
        android:text="Bienvenido!"
        app:layout_constraintBottom_toTopOf="@+id/btnConsultas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="65dp"
        android:layout_height="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="180dp"
        android:text="Usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="MUEBLERIA S.A."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConsultas"
        android:layout_width="174dp"
        android:layout_height="154dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btnConsultas"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnTransaccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/btnConsultas" />

    <Button
        android:id="@+id/btnReporte"
        android:layout_width="174dp"
        android:layout_height="154dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#FBFAFA"
        android:text="@string/btnReportes"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/btnReportes" />

    <Button
        android:id="@+id/btnTransaccion"
        android:layout_width="174dp"
        android:layout_height="154dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btnTransaccion"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/btnTransaccion" />

    <Button
        android:id="@+id/btnMantenedores"
        android:layout_width="174dp"
        android:layout_height="154dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="Mantenedores"
        android:textColor="#000000"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnReporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>